Update SupplyChain.java